--- a/css/nav.css
+++ b/css/nav.css
@@ -1,6 +1,5 @@
 nav {
   background-color: #C0C0C0;
-  position: relative;
   top: 0;
   left: 0;
   padding: 75px 0 0 0;
